--- a/app/index.jade
+++ b/app/index.jade
@@ -1,22 +1,11 @@
 doctype html
-//[if IE 9]><html class="lt-ie10" lang="en" > <![endif]
-html(class='no-js', lang='en')
+html(lang='en')
   head
     meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    title Foundation 5
-    link(rel='stylesheet', href='/css/normalize.css')
-    link(rel='stylesheet', href='/css/foundation.css')
+    title Client Template
     link(rel='stylesheet', href='/css/app.css')
-    script(src='/js/vendor/modernizr.js')
   body
-    .row
-      .small-12.columns
-        h1 Foundation 5 Template
+    h1 Client Template
 
-    script(src='/js/vendor/jquery.js')
-    script(src='/js/vendor/foundation.js')
-    script(src='/js/vendor/lodash.js')
-    script(src='/js/vendor/moment.js')
+    script(src='/js/vendor/jquery-2.1.0.js')
     script(src='/js/source/main.js')
-
