gitignore, jshitrc and leading slashes

--- a/app/index.jade
+++ b/app/index.jade
@@ -3,9 +3,9 @@ html(lang='en')
   head
     meta(charset='utf-8')
     title Client Template
-    link(rel='stylesheet', href='/css/app.css')
+    link(rel='stylesheet', href='css/app.css')
   body
     h1 Client Template
 
-    script(src='/js/vendor/jquery-2.1.0.js')
-    script(src='/js/source/main.js')
+    script(src='js/vendor/jquery-2.1.0.js')
+    script(src='js/source/main.js')
