created working dice

--- a/app/css/app.less
+++ b/app/css/app.less
@@ -1,4 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
+@import url(http://fonts.googleapis.com/css?family=Exo:400,700);
+
 
 body{
   background-image: url('../media/bg.svg');
@@ -9,7 +11,20 @@ body{
 html, button, input, select, textarea,
 .pure-g [class *= "pure-u"] {
   /* Set your content font stack here: */
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Tauri', sans-serif;
+}
+
+h1 {
+  font-size: 80px;
+  text-align: center;
+  font-weight: bold;
+  color: white;
+  margin-bottom: 10px;
+  text-shadow: 2px 2px 5px black;
+}
+
+input {
+  margin-right: 5px;
 }
 
 .button-success,
@@ -51,4 +66,58 @@ html, button, input, select, textarea,
 
 .button-xlarge {
   font-size: 150%;
+}
+
+.pure-form {
+  text-align: center;
+}
+
+.arrowkeys {
+  text-align: center;
+}
+
+.avatar {
+  text-align: center;
+  width: 35px;
+  height: 35px;
+}
+
+.pure-table {
+  background: white;
+}
+
+.horizontal {
+  background: rgba(238, 202, 0, 0.3) !important;
+}
+
+.vertical {
+  background: rgba(221, 6, 0, 0.3) !important;
+}
+
+#dice {
+  margin: 20px auto;
+  text-align: center;
+}
+
+.dice {
+  width: 100px;
+  height: 100px;
+  margin-right: 8px;
+  background: rgba(255, 255, 255, 0.9);
+  border-radius: 13px;
+}
+
+.frozen {
+  background: lightblue;
+  opacity: 0.7;
+}
+
+#roll-btn {
+  text-align: center;
+  margin-bottom: 12px;
+}
+
+#game {
+  text-align:center;
+  margin: 0 auto;
 }
