--- a/app/index.jade
+++ b/app/index.jade
@@ -70,5 +70,7 @@ html(lang='en')
               th Total
           tbody
 
+    footer
+
     script(src='js/vendor/jquery-2.1.0.js')
     script(src='js/source/main.js')
